--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,51 @@
-plugins {
-	id 'java'
-	id 'org.springframework.boot' version '2.7.8'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+
+
+
+buildscript {
+	ext {
+		springBootVersion = '2.1.18.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
 }
+
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group = 'com.booking'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
 }
 
+
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.projectlombok:lombok:1.18.22'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.springframework.boot:spring-boot-starter-validation')
-}
+	implementation('io.jsonwebtoken:jjwt-api:0.11.5')
+	implementation('com.auth0:java-jwt:4.2.1')
+	implementation('io.springfox:springfox-swagger2:2.9.2')
+	implementation('io.springfox:springfox-swagger-ui:2.9.2')
 
-tasks.named('test') {
-	useJUnitPlatform()
+	runtimeOnly('mysql:mysql-connector-java')
+	runtimeOnly('com.h2database:h2')
+	runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.5')
+	runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.11.5')
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+	compileOnly('org.projectlombok:lombok:1.18.24')
+
+	annotationProcessor('org.projectlombok:lombok:1.18.24')
+
+	testCompileOnly('org.projectlombok:lombok:1.18.24')
+	testAnnotationProcessor('org.projectlombok:lombok:1.18.24')
 }
