--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+
+# PUBLIC HOLIDAYS API
+publicholidays.api.endpoint.prod=https://public-holiday.p.rapidapi.com/2023/PL
+publicholidays.app.key=6200e94becmsh46379f482b341c0p18b79ajsn90731b264090
+publicholidays.app.host=public-holiday.p.rapidapi.com
