--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,11 @@ dependencies {
 	runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.5')
 	runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.11.5')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+	//testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.11.0'
+
+
 
 	compileOnly('org.projectlombok:lombok:1.18.24')
 
