--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/booking?serverTimezone=Europe/
 spring.datasource.username=patient_login
 spring.datasource.password=patient_password
 management.endpoints.web.exposure.include=*
+server.port=8081
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jpa.database=mysql
